--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/SpringRole/teams-view-builder#readme",
   "dependencies": {
     "botbuilder": "~4.11.1",
+    "lodash": "~4.17.21",
     "node-emoji": "~1.11.0"
   }
 }
