--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "teams-view-builder",
-  "version": "0.0.1",
+  "name": "@springrole/teams-view-builder",
+  "version": "0.0.0-semantic-release",
   "description": "Teams view builder containing re-usable blocks to be used on any ms-teams app",
   "main": "./lib",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,14 @@
   },
   "homepage": "https://github.com/SpringRole/teams-view-builder#readme",
   "dependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "botbuilder": "^4.11.1",
     "lodash.isempty": "^4.4.0",
     "node-emoji": "^1.11.0"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "prettier": "^2.6.2"
   }
 }
